--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ fastapi[all]==0.78.0
 gunicorn==20.1.0
 psutil==5.9.1
 pytest==7.1.2
-pydantic==1.9.1
 starlette==0.19.1
 jose==1.0.0
 passlib==1.7.4
+SQLAlchemy==2.0.10
+PyJWT==2.6.0
